[gd_scene load_steps=10 format=3 uid="uid://cdnfj3kh5hfe6"]

[ext_resource type="Script" path="res://addons/Uzil/Advance/PageCard/_test/test_page_card.gd" id="1_hokrg"]
[ext_resource type="Script" path="res://addons/Uzil/Advance/PageCard/node/page_card_inst_node.gd" id="2_a3ix0"]
[ext_resource type="Script" path="res://addons/Uzil/Test/misc/test_debug_log.gd" id="2_nn3wm"]
[ext_resource type="Script" path="res://addons/Uzil/Advance/PageCard/node/page_card_page_node.gd" id="3_0vist"]
[ext_resource type="Script" path="res://addons/Uzil/Advance/PageCard/node/page_card_card_node.gd" id="4_0sfdd"]
[ext_resource type="Script" path="res://addons/Uzil/Advance/PageCard/node/page_card_combo_node.gd" id="5_72t2v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mmrma"]
albedo_color = Color(0.489622, 0.489622, 0.489622, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ul8up"]
albedo_color = Color(0.670588, 0.141176, 0.192157, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ilgl2"]
albedo_color = Color(0.490196, 0.490196, 0.490196, 1)

[node name="root" type="Control" node_paths=PackedStringArray("debug_log", "page_only_node", "pagecard_inst_node", "query_line_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hokrg")
debug_log = NodePath("ui/MarginContainer/VBoxContainer/HBoxContainer3/debug_log")
page_only_node = NodePath("page_only")
pagecard_inst_node = NodePath("page_card_inst")
query_line_edit = NodePath("ui/MarginContainer/VBoxContainer/HBoxContainer/Control/MarginContainer/LineEdit")

[node name="ui" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ui"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ui/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(619, 448)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="world" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport"]

[node name="page_card_inst" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.1582, 0, 0)

[node name="routes" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0265, 0)

[node name="p_0" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -0.340759, 0.976847, 0)
material_override = SubResource("StandardMaterial3D_mmrma")

[node name="to_1" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0"]
transform = Transform3D(0.546938, -0.448174, -0.707107, 0.633813, 0.773486, 0, 0.546938, -0.448174, 0.707107, -0.356542, 0.689174, -0.479344)
size = Vector3(0.25, 1.54591, 0.25)

[node name="to_3" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0"]
transform = Transform3D(0.552849, 0.44086, -0.707107, -0.623471, 0.781847, 0, 0.552849, 0.44086, 0.707107, 0.460096, 0.689174, 0.337293)
size = Vector3(0.25, 1.54591, 0.25)

[node name="p_0" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0"]

[node name="p_0_box" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0/p_0"]
size = Vector3(1.1, 1.1, 1.1)

[node name="p_0_red" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0/p_0"]
material_override = SubResource("StandardMaterial3D_ul8up")
size = Vector3(1.1, 1.1, 1.1)

[node name="p_1" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -1.43298, 2.39155, 0)
material_override = SubResource("StandardMaterial3D_ilgl2")

[node name="to_2" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1"]
transform = Transform3D(0.707054, 0.00861397, -0.707107, -0.0121823, 0.999926, 0, 0.707054, 0.00861397, 0.707107, 0.058033, 0.771804, -0.0647697)
size = Vector3(0.25, 1.54591, 0.25)

[node name="to_3" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1"]
transform = Transform3D(0.224041, 0.67155, -0.706277, -0.948419, 0.31702, 0.00058001, 0.224293, 0.669716, 0.707936, 0.863844, -0.0252092, 0.741041)
size = Vector3(0.25, 1.54591, 0.25)

[node name="p_1" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1"]

[node name="p_1_box" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1/p_1"]
size = Vector3(1.1, 1.1, 1.1)

[node name="p_1_red" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1/p_1"]
material_override = SubResource("StandardMaterial3D_ul8up")
size = Vector3(1.1, 1.1, 1.1)

[node name="p_2" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -1.42904, 3.82896, 0)
material_override = SubResource("StandardMaterial3D_ilgl2")

[node name="p_2" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_2"]

[node name="p_2_box" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_2/p_2"]
size = Vector3(1.1, 1.1, 1.1)

[node name="p_2_red" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_2/p_2"]
material_override = SubResource("StandardMaterial3D_ul8up")
size = Vector3(1.1, 1.1, 1.1)

[node name="p_3" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.685754, 2.40145, 0)
material_override = SubResource("StandardMaterial3D_ilgl2")

[node name="to_4" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3"]
transform = Transform3D(0.707054, 0.00861397, -0.707107, -0.0121823, 0.999926, 0, 0.707054, 0.00861397, 0.707107, 0.090652, 0.761903, -0.0321507)
size = Vector3(0.25, 1.54591, 0.25)

[node name="p_3" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3"]

[node name="p_3_box" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3/p_3"]
size = Vector3(1.1, 1.1, 1.1)

[node name="p_3_red" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3/p_3"]
material_override = SubResource("StandardMaterial3D_ul8up")
size = Vector3(1.1, 1.1, 1.1)

[node name="p_4" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.702529, 3.92542, 0)
material_override = SubResource("StandardMaterial3D_ilgl2")

[node name="p_4" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_4"]

[node name="p_4_box" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_4/p_4"]
size = Vector3(1.1, 1.1, 1.1)

[node name="p_4_red" type="CSGBox3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_4/p_4"]
material_override = SubResource("StandardMaterial3D_ul8up")
size = Vector3(1.1, 1.1, 1.1)

[node name="page_only" type="Node3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00028, 0, 0)

[node name="card_a" type="CSGSphere3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0124493, 5.04926, 0)

[node name="card_b" type="CSGSphere3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5009, 0)

[node name="card_c" type="CSGSphere3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0212061, 1.86591, 0)

[node name="Camera3D" type="Camera3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world"]
transform = Transform3D(1, 0, 0, 0, 0.99997, -0.00769659, 0, 0.00769659, 0.99997, 0.00224881, 3.57149, 9.633)
keep_aspect = 0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world"]
transform = Transform3D(0.734382, -0.361382, 0.574532, 5.67399e-08, 0.846472, 0.532433, -0.678737, -0.391009, 0.621634, 4.15559, 7.47269, 0.157048)

[node name="debug_log" type="TextEdit" parent="ui/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.71
script = ExtResource("2_nn3wm")

[node name="HBoxContainer2" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Button1" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "change"

[node name="Button2" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "open L"

[node name="Button3" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "open R"

[node name="Button4" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "nav Top L"

[node name="Button5" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "nav TopR
through 1"

[node name="Button6" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "nav TopR
without 1"

[node name="Button7" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "nav TopR
graft to 3"

[node name="Control2" type="Control" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.03

[node name="HBoxContainer3" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 5

[node name="test_page_inst_nav" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "test_nav_simple()"

[node name="test_page_only" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "test_page_only()"

[node name="HBoxContainer" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "back"

[node name="Control" type="Control" parent="ui/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="ui/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="LineEdit" type="LineEdit" parent="ui/MarginContainer/VBoxContainer/HBoxContainer/Control/MarginContainer"]
layout_mode = 2

[node name="QueryBtn" type="Button" parent="ui/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(132, 0)
layout_mode = 2
text = "Query"

[node name="page_card_inst" type="Node" parent="." node_paths=PackedStringArray("page_nodes", "card_nodes")]
script = ExtResource("2_a3ix0")
page_nodes = [NodePath("pages/page_1"), NodePath("pages/page_2"), NodePath("pages/page_3"), NodePath("pages/page_4")]
card_nodes = [NodePath("cards/card_0"), NodePath("cards/card_0/card_0_h"), NodePath("cards/card_1"), NodePath("cards/card_1/card_1_h"), NodePath("cards/card_2"), NodePath("cards/card_2/card_2_h"), NodePath("cards/card_3"), NodePath("cards/card_3/card_3_h"), NodePath("cards/card_4"), NodePath("cards/card_4/card_4_h")]

[node name="pages" type="Node" parent="page_card_inst"]

[node name="_combos" type="Node" parent="page_card_inst/pages"]

[node name="combo_main" type="Node" parent="page_card_inst/pages/_combos"]
script = ExtResource("5_72t2v")
query_str = "+type:main"

[node name="combo_highlight" type="Node" parent="page_card_inst/pages/_combos"]
script = ExtResource("5_72t2v")
query_str = "+type:main,highlight"

[node name="page_1" type="Node" parent="page_card_inst/pages" node_paths=PackedStringArray("default_combo_node", "combo_nodes", "card_nodes")]
script = ExtResource("3_0vist")
default_combo_node = NodePath("../_combos/combo_main")
combo_nodes = [NodePath("../_combos/combo_main"), NodePath("../_combos/combo_highlight")]
card_nodes = [NodePath("../../cards/card_1"), NodePath("../../cards/card_1/card_1_h")]

[node name="page_2" type="Node" parent="page_card_inst/pages" node_paths=PackedStringArray("default_combo_node", "combo_nodes", "card_nodes")]
script = ExtResource("3_0vist")
default_combo_node = NodePath("../_combos/combo_main")
combo_nodes = [NodePath("../_combos/combo_main"), NodePath("../_combos/combo_highlight")]
card_nodes = [NodePath("../../cards/card_2"), NodePath("../../cards/card_2/card_2_h")]

[node name="page_3" type="Node" parent="page_card_inst/pages" node_paths=PackedStringArray("default_combo_node", "combo_nodes", "card_nodes")]
script = ExtResource("3_0vist")
default_combo_node = NodePath("../_combos/combo_main")
combo_nodes = [NodePath("../_combos/combo_main"), NodePath("../_combos/combo_highlight")]
card_nodes = [NodePath("../../cards/card_3"), NodePath("../../cards/card_3/card_3_h")]

[node name="page_4" type="Node" parent="page_card_inst/pages" node_paths=PackedStringArray("default_combo_node", "combo_nodes", "card_nodes")]
script = ExtResource("3_0vist")
default_combo_node = NodePath("../_combos/combo_main")
combo_nodes = [NodePath("../_combos/combo_main"), NodePath("../_combos/combo_highlight")]
card_nodes = [NodePath("../../cards/card_4"), NodePath("../../cards/card_4/card_4_h")]

[node name="cards" type="Node" parent="page_card_inst"]

[node name="card_0" type="Node" parent="page_card_inst/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:0", "type:main"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0/p_0/p_0_box")]

[node name="card_0_h" type="Node" parent="page_card_inst/cards/card_0" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:0", "type:highlight"])
targets = [NodePath("../../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_0/p_0/p_0_red")]

[node name="card_1" type="Node" parent="page_card_inst/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:1", "type:main"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1/p_1/p_1_box")]

[node name="card_1_h" type="Node" parent="page_card_inst/cards/card_1" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:1", "type:highlight"])
targets = [NodePath("../../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_1/p_1/p_1_red")]

[node name="card_2" type="Node" parent="page_card_inst/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:2", "type:main"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_2/p_2/p_2_box")]

[node name="card_2_h" type="Node" parent="page_card_inst/cards/card_2" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:2", "type:highlight"])
targets = [NodePath("../../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_2/p_2/p_2_red")]

[node name="card_3" type="Node" parent="page_card_inst/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:3", "type:main"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3/p_3/p_3_box")]

[node name="card_3_h" type="Node" parent="page_card_inst/cards/card_3" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:3", "type:highlight"])
targets = [NodePath("../../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_3/p_3/p_3_red")]

[node name="card_4" type="Node" parent="page_card_inst/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:4", "type:main"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_4/p_4/p_4_box")]

[node name="card_4_h" type="Node" parent="page_card_inst/cards/card_4" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:4", "type:highlight"])
targets = [NodePath("../../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_card_inst/routes/p_4/p_4/p_4_red")]

[node name="page_only" type="Node" parent="." node_paths=PackedStringArray("combo_nodes", "card_nodes")]
script = ExtResource("3_0vist")
combo_nodes = [NodePath("combos/combo_1"), NodePath("combos/combo_2")]
card_nodes = [NodePath("cards/card_1"), NodePath("cards/card_2"), NodePath("cards/card_3")]

[node name="combos" type="Node" parent="page_only"]

[node name="combo_1" type="Node" parent="page_only/combos"]
script = ExtResource("5_72t2v")
query_str = "+card:1,2"

[node name="combo_2" type="Node" parent="page_only/combos"]
script = ExtResource("5_72t2v")
query_str = "+card:2,3"

[node name="cards" type="Node" parent="page_only"]

[node name="card_1" type="Node" parent="page_only/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:1"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only/card_a")]

[node name="card_2" type="Node" parent="page_only/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:2"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only/card_b")]

[node name="card_3" type="Node" parent="page_only/cards" node_paths=PackedStringArray("targets")]
script = ExtResource("4_0sfdd")
tags = Array[String](["card:3"])
targets = [NodePath("../../../ui/MarginContainer/VBoxContainer/HBoxContainer3/Panel/SubViewportContainer/SubViewport/world/page_only/card_c")]

[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button1" to="." method="test_page_inst_change"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button2" to="." method="test_page_inst_open_left"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button3" to="." method="test_page_inst_open_right"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button4" to="." method="test_page_inst_nav_top_left"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button5" to="." method="test_page_inst_nav_top_right_through_1"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button6" to="." method="test_page_inst_nav_top_right_without_1"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Button7" to="." method="test_page_inst_nav_top_right_graft_on_3"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3/test_page_inst_nav" to="." method="test_page_inst_nav"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3/test_page_only" to="." method="test_page_only"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="test_page_inst_back"]
[connection signal="pressed" from="ui/MarginContainer/VBoxContainer/HBoxContainer/QueryBtn" to="." method="test_query"]
